--- a/view/frontend/web/template/payment/bniva.html
+++ b/view/frontend/web/template/payment/bniva.html
@@ -7,6 +7,9 @@
     <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
   </div>
   <div class="payment-method-content">
+    <div class="payment-method-note" data-bind="text: getDescription()"></div>
+  </div>
+  <div class="payment-method-content">
     <div class="actions-toolbar">
       <div class="primary">
         <button class="action primary checkout"
