--- a/view/frontend/web/template/payment/invoiceva.html
+++ b/view/frontend/web/template/payment/invoiceva.html
@@ -7,6 +7,13 @@
     <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
   </div>
   <div class="payment-method-content">
+    <div class="payment-method-note" data-bind="text: getDescription()"></div>
+    <div data-bind="
+         style: {color: 'red'}
+         ">
+      <span data-bind="text: getTestDescription().prefix, style: { 'font-weight': 'bold' }"></span>
+      <span data-bind="text: getTestDescription().content"></span>
+    </div>
     <div class="actions-toolbar">
       <div class="primary">
         <button class="action primary checkout"
