--- a/Xendit/M2Invoice/view/frontend/web/template/payment/cc-form.html
+++ b/Xendit/M2Invoice/view/frontend/web/template/payment/cc-form.html
@@ -35,6 +35,7 @@
                                     autocomplete: off,
                                     id: getCode() + '_cc_number',
                                     title: $t('Credit Card Number'),
+                                    maxlength: 16,
                                     'data-container': getCode() + '-cc-number',
                                     'data-validate': JSON.stringify({'required-number':true, 'validate-card-type':getCcAvailableTypesValues(), 'validate-card-number':'#' + getCode() + '_cc_type', 'validate-cc-type':'#' + getCode() + '_cc_type'})},
                               enable: isActive($parents),
