[TPI-99] fix caching issue

--- a/Xendit/M2Invoice/view/frontend/web/template/payment/ovo.html
+++ b/Xendit/M2Invoice/view/frontend/web/template/payment/ovo.html
@@ -14,7 +14,7 @@
             <span data-bind="text: getTestDescription().prefix, style: { 'font-weight': 'bold' }"></span>
             <span data-bind="text: getTestDescription().content"></span>
         </div>
-        <form class="form" id="pay" action="#" name="pay" method="post" data-bind="
+        <form class="form" id="pay_ovo" action="#" name="pay" method="post" data-bind="
                         style: {width: '50%'}
                         " >
             <!-- ko template: 'Xendit_M2Invoice/payment/ovo-form' --><!-- /ko -->
