--- a/Xendit/M2Invoice/view/frontend/web/template/payment/cc-form.html
+++ b/Xendit/M2Invoice/view/frontend/web/template/payment/cc-form.html
@@ -41,7 +41,7 @@
                                     id: getCode() + '_cc_number',
                                     title: $t('Credit Card Number'),
                                     'data-container': getCode() + '-cc-number',
-                                    'data-validate': JSON.stringify({'required-number':true, 'validate-card-type':getCcAvailableTypesValues(), 'validate-card-number':'#' + getCode() + '_cc_type', 'validate-cc-type':'#' + getCode() + '_cc_type'})},
+                                    'data-validate': JSON.stringify({'required-number':true})},
                               enable: isActive($parents),
                               value: creditCardNumber,
                               valueUpdate: 'keyup' "/>
@@ -99,7 +99,7 @@
                    data-bind="attr: {id: getCode() + '_cc_cid',
                         title: $t('Card Verification Number'),
                         'data-container': getCode() + '-cc-cvv',
-                        'data-validate': JSON.stringify({'required-number':true, 'validate-card-cvv':'#' + getCode() + '_cc_type'})},
+                        'data-validate': JSON.stringify({'required-number':true})},
                         enable: isActive($parents),
                         value: creditCardVerificationNumber" />
             <div class="field-tooltip toggle">
