--- a/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
@@ -19,6 +19,7 @@
                     <item name="briva" xsi:type="string">Xendit_M2Invoice::multishipping/briva.phtml</item>
                     <item name="mandiriva" xsi:type="string">Xendit_M2Invoice::multishipping/mandiriva.phtml</item>
                     <item name="permatava" xsi:type="string">Xendit_M2Invoice::multishipping/permatava.phtml</item>
+                    <item name="ovo" xsi:type="string">Xendit_M2Invoice::multishipping/ovo.phtml</item>
                 </argument>
             </arguments>
         </referenceBlock>
