--- a/Xendit/M2Invoice/view/frontend/web/template/payment/multishipping/description.html
+++ b/Xendit/M2Invoice/view/frontend/web/template/payment/multishipping/description.html
@@ -1,4 +1,4 @@
-<div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+<div class="payment-method" css="'_active': (getCode() === isChecked())">
   <div class="payment-method-content">
     <div class="payment-method-note" data-bind="text: getDescription()"></div>
     <div data-bind="
