--- a/Xendit/M2Invoice/view/frontend/web/template/payment/cc-hosted.html
+++ b/Xendit/M2Invoice/view/frontend/web/template/payment/cc-hosted.html
@@ -7,11 +7,9 @@
     <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
   </div>
   <div class="payment-method-content">
-    <div class="payment-method-note" data-bind="text: getDescription()"></div>
-    <div data-bind="
-         style: {color: 'red'}
-         ">
-      <span data-bind="text: getTestDescription().prefix, style: { 'font-weight': 'bold' }"></span>
+    <div class="payment-method-note" data-bind="text: getDescription(), style: {'white-space': 'pre-line'}"></div>
+    <div data-bind="style: {color: 'red'}">
+      <span data-bind="text: getTestDescription().prefix, style: {'font-weight': 'bold'}"></span>
       <span data-bind="text: getTestDescription().content"></span>
     </div>
     <div class="actions-toolbar">
