--- a/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
@@ -14,6 +14,7 @@
                     <item name="cc" xsi:type="string">Xendit_M2Invoice::multishipping/cc.phtml</item>
                     <item name="cchosted" xsi:type="string">Xendit_M2Invoice::multishipping/cchosted.phtml</item>
                     <item name="cc_installment" xsi:type="string">Xendit_M2Invoice::multishipping/cc_installment.phtml</item>
+                    <item name="cc_subscription" xsi:type="string">Xendit_M2Invoice::multishipping/cc_subscription.phtml</item>
                     <item name="alfamart" xsi:type="string">Xendit_M2Invoice::multishipping/alfamart.phtml</item>
                     <item name="bcava" xsi:type="string">Xendit_M2Invoice::multishipping/bcava.phtml</item>
                     <item name="bniva" xsi:type="string">Xendit_M2Invoice::multishipping/bniva.phtml</item>
