--- a/Xendit/M2Invoice/view/adminhtml/templates/order/subscription_info.phtml
+++ b/Xendit/M2Invoice/view/adminhtml/templates/order/subscription_info.phtml
@@ -5,11 +5,12 @@ if ($block->getPaymentMethod() === 'cc_subscription') {
     $subscriptionData = $block->getSubscriptionConfig();
     $moreThan1 = ($subscriptionData['card_subscription_interval_count'] > 1 ? true : false);
 ?>
-<div>
+<div id="xendit-subscription-info" style="display: none;">
+    <br clear="all"><br><br>
     <div class="admin__page-section-item-title">
         <span class="title">Subscription Information</span>
     </div>
-    <p>Every <?php
+    <div class="admin__page-section-item-content">Every <?php
         if ($moreThan1) {
             echo $subscriptionData['card_subscription_interval_count'] . ' ';
         }
@@ -17,6 +18,16 @@ if ($block->getPaymentMethod() === 'cc_subscription') {
         if ($moreThan1) {
             echo 's';
         }
-    ?></p>
+    ?></div>
 </div>
+<script>
+    require([
+        'jquery'
+    ], function ($) {
+        $(function () {
+            var html = $('#xendit-subscription-info').html();
+            $('.order-view-billing-shipping .admin__page-section-content').append('<div class="admin__page-section-item">' + html + '</div>');
+        })
+    })
+</script>
 <?php } ?>
