--- a/Xendit/M2Invoice/view/adminhtml/layout/sales_order_view.xml
+++ b/Xendit/M2Invoice/view/adminhtml/layout/sales_order_view.xml
@@ -9,6 +9,7 @@
     <body>
         <referenceBlock name="order_additional_info">
             <block class="Xendit\M2Invoice\Block\CustomView" name="xendit_order_view" template="Xendit_M2Invoice::order/subscription_info.phtml"/>
+            <block class="Xendit\M2Invoice\Block\CustomView" name="xendit_order_view" template="Xendit_M2Invoice::order/installment_info.phtml"/>
         </referenceBlock>
     </body>
 </page>
