--- a/Xendit/M2Invoice/view/adminhtml/layout/sales_order_view.xml
+++ b/Xendit/M2Invoice/view/adminhtml/layout/sales_order_view.xml
@@ -5,10 +5,11 @@
  * See COPYING.txt for license details.
  */
 -->
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="order_additional_info">
-            <block class="Xendit\M2Invoice\Block\CustomView" name="subscription_order_view" template="Xendit_M2Invoice::order/subscription_info.phtml"/>
+            <block class="Xendit\M2Invoice\Block\CustomView" name="subscription_order_view" template="Xendit_M2Invoice::order/subscription_info.phtml" cacheable="false"/>
+            <block class="Xendit\M2Invoice\Block\CustomView" name="installment_order_view" template="Xendit_M2Invoice::order/installment_info.phtml" cacheable="false"/>
         </referenceBlock>
     </body>
 </page>
