--- a/Xendit/M2Invoice/view/frontend/templates/order/subscription_info.phtml
+++ b/Xendit/M2Invoice/view/frontend/templates/order/subscription_info.phtml
@@ -2,7 +2,7 @@
 
 if ($block->getPaymentMethod() === 'cc_subscription') {
     $subscriptionData = $block->getSubscriptionConfig();
-    $moreThan1 = ($subscriptionData['card_subscription_interval_count'] > 1 ? true : false);
+    $moreThan1 = ($subscriptionData['interval_count'] > 1 ? true : false);
 ?>
 <div id="xendit-subscription-info" style="display: none;">
     <strong class="box-title">
@@ -10,9 +10,9 @@ if ($block->getPaymentMethod() === 'cc_subscription') {
     </strong>
     <div class="box-content">Every <?php
         if ($moreThan1) {
-            echo $subscriptionData['card_subscription_interval_count'] . ' ';
+            echo $subscriptionData['interval_count'] . ' ';
         }
-        echo strtolower($subscriptionData['card_subscription_interval']);
+        echo strtolower($subscriptionData['interval']);
         if ($moreThan1) {
             echo 's';
         }
