--- a/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
@@ -14,6 +14,7 @@
                     <item name="mandiriva" xsi:type="string">Xendit_M2Invoice::multishipping/mandiriva.phtml</item>
                     <item name="permatava" xsi:type="string">Xendit_M2Invoice::multishipping/permatava.phtml</item>
                     <item name="ovo" xsi:type="string">Xendit_M2Invoice::multishipping/ovo.phtml</item>
+                    <item name="shopeepay" xsi:type="string">Xendit_M2Invoice::multishipping/shopeepay.phtml</item>
                     <item name="dana" xsi:type="string">Xendit_M2Invoice::multishipping/dana.phtml</item>
                     <item name="indomaret" xsi:type="string">Xendit_M2Invoice::multishipping/indomaret.phtml</item>
                     <item name="linkaja" xsi:type="string">Xendit_M2Invoice::multishipping/linkaja.phtml</item>
