--- a/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
@@ -18,7 +18,7 @@
                     <item name="dana" xsi:type="string">Xendit_M2Invoice::multishipping/dana.phtml</item>
                     <item name="indomaret" xsi:type="string">Xendit_M2Invoice::multishipping/indomaret.phtml</item>
                     <item name="linkaja" xsi:type="string">Xendit_M2Invoice::multishipping/linkaja.phtml</item>
-                    <item name="qr_codes" xsi:type="string">Xendit_M2Invoice::multishipping/qr_codes.phtml</item>
+                    <item name="qris" xsi:type="string">Xendit_M2Invoice::multishipping/qris.phtml</item>
                     <item name="dd_bri" xsi:type="string">Xendit_M2Invoice::multishipping/dd_bri.phtml</item>
                     <item name="kredivo" xsi:type="string">Xendit_M2Invoice::multishipping/kredivo.phtml</item>
                 </argument>
