Implement new payment method into Magento: Paymaya

--- a/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
@@ -21,6 +21,7 @@
                     <item name="qris" xsi:type="string">Xendit_M2Invoice::multishipping/qris.phtml</item>
                     <item name="dd_bri" xsi:type="string">Xendit_M2Invoice::multishipping/dd_bri.phtml</item>
                     <item name="kredivo" xsi:type="string">Xendit_M2Invoice::multishipping/kredivo.phtml</item>
+                    <item name="paymaya" xsi:type="string">Xendit_M2Invoice::multishipping/paymaya.phtml</item>
                 </argument>
             </arguments>
         </referenceBlock>
