Show payment image on checkout page

--- a/Xendit/M2Invoice/view/frontend/web/css/xendit.css
+++ b/Xendit/M2Invoice/view/frontend/web/css/xendit.css
@@ -26,3 +26,9 @@
     vertical-align: middle;
     line-height: normal;
 }
+.xendit-payment-icon-list{
+    display: inline-block;
+}
+.xendit-payment-icon{
+    vertical-align: middle;
+}
