--- a/Xendit/M2Invoice/view/frontend/web/template/payment/cc-subscription.html
+++ b/Xendit/M2Invoice/view/frontend/web/template/payment/cc-subscription.html
@@ -4,7 +4,14 @@
           name="payment[method]"
           class="radio"
           data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-    <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
+    <label data-bind="attr: {'for': getCode()}" class="label">
+        <!-- ko if: getMethodImage() -->
+        <div class="xendit-payment-icon-list" data-bind="foreach: getMethodImage()">
+            <img data-bind="attr: {src: $data}" class="xendit-payment-icon"/>
+        </div>
+        <!--/ko-->
+        <span data-bind="text: getTitle()"></span>
+    </label>
   </div>
   <div class="payment-method-content">
     <div class="payment-method-note" data-bind="text: getDescription(), style: {'white-space': 'pre-line'}"></div>
