--- a/Xendit/M2Invoice/view/frontend/templates/multishipping/bjbva.phtml
+++ b/Xendit/M2Invoice/view/frontend/templates/multishipping/bjbva.phtml
@@ -18,9 +18,15 @@
                     component: 'Xendit_M2Invoice/js/view/payment/method-renderer/multishipping/bjbva',
                     name: 'payment_method_bjbva',
                     method: paymentMethodData.method,
-                    item: paymentMethodData
+                    item: paymentMethodData,
+                    image:  paymentMethodData.method.image,
                 }
             ]);
+
+            if(window.checkoutConfig.payment[paymentMethodData.method].image != ""){
+                $("label[for=p_method_"+paymentMethodData.method+"]")
+                    .prepend("<img class='xendit-payment-icon' src="+window.checkoutConfig.payment[paymentMethodData.method].image+">");
+            }
 
             $('body').trigger('contentUpdated');
         })
