--- a/Xendit/M2Invoice/view/frontend/templates/multishipping/cebuana.phtml
+++ b/Xendit/M2Invoice/view/frontend/templates/multishipping/cebuana.phtml
@@ -22,6 +22,11 @@
                 }
             ]);
 
+            if(window.checkoutConfig.payment[paymentMethodData.method].image != ""){
+                $("label[for=p_method_"+paymentMethodData.method+"]")
+                    .prepend("<img class='xendit-payment-icon' src="+window.checkoutConfig.payment[paymentMethodData.method].image+">");
+            }
+
             $('body').trigger('contentUpdated');
         })
     })
