--- a/Xendit/M2Invoice/view/frontend/templates/multishipping/bjbva.phtml
+++ b/Xendit/M2Invoice/view/frontend/templates/multishipping/bjbva.phtml
@@ -25,7 +25,7 @@
 
             if(window.checkoutConfig.payment[paymentMethodData.method].image != ""){
                 $("label[for=p_method_"+paymentMethodData.method+"]")
-                    .prepend("<img class='xendit-payment-icon' src="+window.checkoutConfig.payment[paymentMethodData.method].image+">");
+                    .prepend('<img class="xendit-payment-icon" src="'+window.checkoutConfig.payment[paymentMethodData.method].image+'" />');
             }
 
             $('body').trigger('contentUpdated');
