--- a/Xendit/M2Invoice/view/frontend/templates/multishipping/cc_subscription.phtml
+++ b/Xendit/M2Invoice/view/frontend/templates/multishipping/cc_subscription.phtml
@@ -25,7 +25,7 @@
             if(window.checkoutConfig.payment[paymentMethodData.method].image.length > 0) {
                 $(window.checkoutConfig.payment[paymentMethodData.method].image.reverse()).each(function(key, value){
                     $("label[for=p_method_"+paymentMethodData.method+"]")
-                        .prepend("<img class='xendit-payment-icon' src="+value+">");
+                        .prepend('<img class="xendit-payment-icon" src="'+value+'">');
                 });
             }
 
