--- a/Xendit/M2Invoice/view/frontend/web/css/xendit.css
+++ b/Xendit/M2Invoice/view/frontend/web/css/xendit.css
@@ -34,6 +34,7 @@
     vertical-align: middle;
     margin: 0 3px;
     float: right;
+    width: 50px;
 }
 .multicheckout #payment-methods dt.item-title,
 .payment-method .payment-method-title{
