--- a/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/Xendit/M2Invoice/view/frontend/layout/multishipping_checkout_billing.xml
@@ -37,6 +37,7 @@
                     <item name="dp_ecpay_loan" xsi:type="string">Xendit_M2Invoice::multishipping/dp_ecpay_loan.phtml</item>
                     <item name="bjbva" xsi:type="string">Xendit_M2Invoice::multishipping/bjbva.phtml</item>
                     <item name="bsiva" xsi:type="string">Xendit_M2Invoice::multishipping/bsiva.phtml</item>
+                    <item name="cashalo" xsi:type="string">Xendit_M2Invoice::multishipping/cashalo.phtml</item>
                 </argument>
             </arguments>
         </referenceBlock>
