Add new IDR payment Akulaku

--- a/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/view/frontend/layout/multishipping_checkout_billing.xml
@@ -40,6 +40,7 @@
                     <item name="shopeepayph" xsi:type="string">Xendit_M2Invoice::multishipping/shopeepayph.phtml</item>
                     <item name="uangme" xsi:type="string">Xendit_M2Invoice::multishipping/uangme.phtml</item>
                     <item name="astrapay" xsi:type="string">Xendit_M2Invoice::multishipping/astrapay.phtml</item>
+                    <item name="akulaku" xsi:type="string">Xendit_M2Invoice::multishipping/akulaku.phtml</item>
                 </argument>
             </arguments>
         </referenceBlock>
