--- a/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/view/frontend/layout/multishipping_checkout_billing.xml
@@ -41,6 +41,7 @@
                     <item name="uangme" xsi:type="string">Xendit_M2Invoice::multishipping/uangme.phtml</item>
                     <item name="astrapay" xsi:type="string">Xendit_M2Invoice::multishipping/astrapay.phtml</item>
                     <item name="akulaku" xsi:type="string">Xendit_M2Invoice::multishipping/akulaku.phtml</item>
+                    <item name="dd_rcbc" xsi:type="string">Xendit_M2Invoice::multishipping/dd_rcbc.phtml</item>
                 </argument>
             </arguments>
         </referenceBlock>
