--- a/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/view/frontend/layout/multishipping_checkout_billing.xml
@@ -34,6 +34,7 @@
                     <item name="dp_palawan" xsi:type="string">Xendit_M2Invoice::multishipping/dp_palawan.phtml</item>
                     <item name="dp_mlhuillier" xsi:type="string">Xendit_M2Invoice::multishipping/dp_mlhuillier.phtml</item>
                     <item name="dp_ecpay_loan" xsi:type="string">Xendit_M2Invoice::multishipping/dp_ecpay_loan.phtml</item>
+                    <item name="dp_ecpay_school" xsi:type="string">Xendit_M2Invoice::multishipping/dp_ecpay_school.phtml</item>
                     <item name="bjbva" xsi:type="string">Xendit_M2Invoice::multishipping/bjbva.phtml</item>
                     <item name="bsiva" xsi:type="string">Xendit_M2Invoice::multishipping/bsiva.phtml</item>
                     <item name="cashalo" xsi:type="string">Xendit_M2Invoice::multishipping/cashalo.phtml</item>
