--- a/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/view/frontend/layout/multishipping_checkout_billing.xml
@@ -45,6 +45,7 @@
                     <item name="atome" xsi:type="string">Xendit_M2Invoice::multishipping/atome.phtml</item>
                     <item name="dd_rcbc" xsi:type="string">Xendit_M2Invoice::multishipping/dd_rcbc.phtml</item>
                     <item name="lbc" xsi:type="string">Xendit_M2Invoice::multishipping/lbc.phtml</item>
+                    <item name="bssva" xsi:type="string">Xendit_M2Invoice::multishipping/bssva.phtml</item>
                 </argument>
             </arguments>
         </referenceBlock>
