--- a/view/frontend/templates/multishipping/unified.phtml
+++ b/view/frontend/templates/multishipping/unified.phtml
@@ -11,12 +11,12 @@
     ], function (layout, $) {
         $(function () {
             var paymentMethodData = {
-                method: 'ovo'
+                method: 'unified'
             };
             layout([
                 {
-                    component: 'Xendit_M2Invoice/js/view/payment/method-renderer/multishipping/ovo',
-                    name: 'payment_method_ovo',
+                    component: 'Xendit_M2Invoice/js/view/payment/method-renderer/multishipping/unified',
+                    name: 'payment_method_unified',
                     method: paymentMethodData.method,
                     item: paymentMethodData
                 }
